fixed spacing between middle img and top content

--- a/css/index.css
+++ b/css/index.css
@@ -297,10 +297,12 @@ header .logo {
 
     .main-content .top-content .text-content { 
       width: 100%;
+      margin-bottom: 40px;
     }
 
     .main-content .middle-img {
       width: 95%;
+      margin: auto;
   } 
 
     .main-content .bottom-content  {
